feat: set up Prometheus client, automate Grafana login, and speed up scripts
Integrated Prometheus client for metrics collection
Automated Grafana admin login using Helm values and Kubernetes secrets
Parallelized Docker builds and Helm/Kubectl commands in scripts for faster execution

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -16,5 +16,5 @@ COPY . .
 FROM base as runtime
 RUN bun install --frozen-lockfile --production
 COPY . .
-EXPOSE 8080
+EXPOSE 8080 9100
 CMD ["bun", "run", "start"]
