--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -16,6 +16,7 @@
     "@types/bun": "^1.2.19",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/response-time": "^2.3.9",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -34,7 +35,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "prom-client": "^15.1.3",
     "redis": "^5.8.0",
+    "response-time": "^2.3.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
