--- a/k8s/api-gateway-service.yaml
+++ b/k8s/api-gateway-service.yaml
@@ -2,11 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-gateway
+  labels:
+    app: api-gateway
 spec:
   selector:
     app: api-gateway
   ports:
-    - protocol: TCP
+    - name: http
       port: 8080
       targetPort: 8080
-  type: ClusterIP
+    - name: metrics
+      port: 9100
+      targetPort: 9100
