feat: integrate routing and context for game search application
- Added react-router-dom for routing between pages.
- Created AppContext for managing application state including search query and game details.
- Implemented GameCard component to display individual game information.
- Refactored SearchBar to use context for managing input state.
- Removed SearchButton component and integrated its functionality into SearchBar.
- Created GameListPage and GameDetailPage components for displaying game lists and details.
- Updated API service to include a function for fetching game prices.
- Added TypeScript types for game search results.
- Updated tsconfig to allow non-erasable syntax.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
