--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,48 @@
-FROM python:3.11-slim as base
+FROM python:3.10-slim as base
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+RUN useradd -m appuser
+USER appuser
 
-COPY ./src ./src
+# Install Poetry as appuser (in user space)
+RUN pip install --user poetry
+ENV PATH="/home/appuser/.local/bin:${PATH}"
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY --chown=appuser:appuser . .
 
-# Install dev dependencies
-FROM base as dev
-COPY requirements-dev.txt .
-RUN pip install --no-cache-dir -r requirements-dev.txt
+# Development image
+FROM base as development
+
+WORKDIR /app
+ENV PYTHONPATH=/app/src
+
+RUN poetry install --no-root
+
 EXPOSE 8000
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
-# Setup testing environment
+CMD ["poetry", "run", "uvicorn", "jpg_backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Test image
 FROM base as test
-COPY requirements-dev.txt .
-RUN pip install --no-cache-dir -r requirements-dev.txt
-COPY ./tests ./tests
-CMD ["python", "-m", "pytest", "tests/", "-v"]
+
+WORKDIR /app
+
+ENV PYTHONPATH=/app/src
+
+RUN poetry install --no-root --with dev
+
+CMD ["poetry", "run", "pytest", "tests/"]
+
+# Production image
+FROM base as production
+
+WORKDIR /app
+
+ENV PYTHONPATH=/app/src
+
+RUN poetry install --no-root --only main
+
+EXPOSE 8000
+
+CMD ["poetry", "run", "uvicorn", "jpg_backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
