--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 # Trigges workflow on push or pull requests to main and dev branches
 on:
   push:
-    branches: [main, dev, ci-fix]
+    branches: [main]
   pull_request:
-    branches: [main, dev , ci-fix]
+    branches: [main]
 
 jobs:
   build-and-test-backend:
@@ -29,13 +29,15 @@ jobs:
         run: docker build --build-arg VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} --target production -t johnsgameprice-frontend -f frontend/Dockerfile frontend
 
   deploy-backend:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build-and-test-backend
     steps:
       - name: Trigger Render Backend Deploy
         run: curl -X POST ${{ secrets.RENDER_BACKEND_DEPLOY_HOOK }}
-  
+
   deploy-frontend:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build-frontend
     steps:
