--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,22 +1,69 @@
-name: Release Please
-
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
+name: release-please
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      backend--tag_name: ${{ steps.release.outputs.backend--tag_name }}
+      backend--release_created: ${{ steps.release.outputs.backend--release_created }}
+      frontend--tag_name: ${{ steps.release.outputs.frontend--tag_name }} 
+      frontend--release_created: ${{ steps.release.outputs.frontend--release_created }}
     steps:
-      - uses: google-github-actions/release-please-action@v4
+      - uses: googleapis/release-please-action@v4
+        id: release
         with:
-          release-type: monorepo
-          packages: |
-            frontend:
-              release-type: node
-              package-name: johnsgameprice-frontend
-              path: frontend
-            backend:
-              release-type: python
-              package-name: johnsgameprice-backend
-              path: backend
+          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
+      - name: Print release outputs for debugging
+        run: |
+          echo "Backend Tag Name: ${{ steps.release.outputs.backend--tag_name }}"
+          echo "Backend Release Created: ${{ steps.release.outputs.backend--release_created }}"
+          echo "Frontend Tag Name: ${{ steps.release.outputs.frontend--tag_name }}"
+          echo "Frontend Release Created: ${{ steps.release.outputs.frontend--release_created }}"
+        
+  release-backend:
+    if: ${{ needs.release-please.outputs.backend--release_created == 'true' }}
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Backend Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ needs.release-please.outputs.backend--tag_name }}
+          release_name: Backend Release ${{ needs.release-please.outputs.backend--tag_name }}
+          body: |
+            Automated backend release created by release-please.
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+
+  release-frontend:
+    if: ${{ needs.release-please.outputs.frontend--release_created == 'true' }}
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Frontend Release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ needs.release-please.outputs.frontend--tag_name }}
+          release_name: Frontend Release ${{ needs.release-please.outputs.frontend--tag_name }}
+          body: |
+            Automated frontend release created by release-please.
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
