feat(ci): update release workflow to zip and upload artifacts for backend and frontend

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,16 @@
 {
-    "packages": {
-        "backend": {
-            "path": "backend",
-            "release-type": "python"
-        },
-        "frontend": {
-            "path": "frontend",
-            "release-type": "node"
-        }
+  "include-component-in-tag": true,
+  "include-v-in-tag": true,
+  "tag-separator": "@",
+  "separate-pull-requests": true,
+  "packages": {
+    "backend": {
+      "path": "backend",
+      "release-type": "python"
+    },
+    "frontend": {
+      "path": "frontend",
+      "release-type": "node"
     }
+  }
 }
