--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,3 +1,5 @@
+name: Release Please
+
 on:
   push:
     branches:
@@ -5,10 +7,7 @@ on:
 
 permissions:
   contents: write
-  issues: write
   pull-requests: write
-
-name: release-please
 
 jobs:
   release-please:
@@ -16,7 +15,7 @@ jobs:
     outputs:
       backend--tag_name: ${{ steps.release.outputs.backend--tag_name }}
       backend--release_created: ${{ steps.release.outputs.backend--release_created }}
-      frontend--tag_name: ${{ steps.release.outputs.frontend--tag_name }} 
+      frontend--tag_name: ${{ steps.release.outputs.frontend--tag_name }}
       frontend--release_created: ${{ steps.release.outputs.frontend--release_created }}
     steps:
       - uses: googleapis/release-please-action@v4
@@ -26,29 +25,26 @@ jobs:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
       - name: Print release outputs for debugging
+        continue-on-error: true
         run: |
-          echo "Backend Tag Name: ${{ steps.release.outputs.backend--tag_name }}"
-          echo "Backend Release Created: ${{ steps.release.outputs.backend--release_created }}"
-          echo "Frontend Tag Name: ${{ steps.release.outputs.frontend--tag_name }}"
-          echo "Frontend Release Created: ${{ steps.release.outputs.frontend--release_created }}"
-        
+          echo "Release outputs:"
+          echo "${{ toJson(steps.release.outputs) }}"
+
   release-backend:
     if: ${{ needs.release-please.outputs.backend--release_created == 'true' }}
     runs-on: ubuntu-latest
     needs: release-please
     steps:
       - uses: actions/checkout@v4
-      - name: Create Backend Release
-        uses: actions/create-release@v1
+      - name: Zip backend source code
+        run: zip -r backend-${{ needs.release-please.outputs.backend--tag_name }}.zip backend
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          tag_name: ${{ needs.release-please.outputs.backend--tag_name }}
-          release_name: Backend Release ${{ needs.release-please.outputs.backend--tag_name }}
-          body: |
-            Automated backend release created by release-please.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          name: backend-source-${{ needs.release-please.outputs.backend--tag_name }}
+          path: backend-${{ needs.release-please.outputs.backend--tag_name }}.zip
+      
+
 
   release-frontend:
     if: ${{ needs.release-please.outputs.frontend--release_created == 'true' }}
@@ -56,14 +52,10 @@ jobs:
     needs: release-please
     steps:
       - uses: actions/checkout@v4
-      - name: Create Frontend Release
-        uses: actions/create-release@v1
+      - name: Zip Frontend Folder
+        run: zip -r frontend-${{ needs.release-please.outputs.frontend--tag_name }}.zip frontend
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: ${{ needs.release-please.outputs.frontend--tag_name }}
-          release_name: Frontend Release ${{ needs.release-please.outputs.frontend--tag_name }}
-          body: |
-            Automated frontend release created by release-please.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          name: frontend-${{ needs.release-please.outputs.frontend--tag_name }}
+          path: frontend-${{ needs.release-please.outputs.frontend--tag_name }}.zip
