--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,19 @@
 {
-    "packages": {
-        "backend": {
-            "path": "backend",
-            "release-type": "python"
-        },
-        "frontend": {
-            "path": "frontend",
-            "release-type": "node"
-        }
-    }
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "include-component-in-tag": true,
+  "include-v-in-tag": true,
+  "packages": {
+      "backend": {
+          "path": "backend",
+          "release-type": "python",
+          "package-name": "jpg-backend",
+          "component": "backend"
+      },
+      "frontend": {
+          "path": "frontend",
+          "release-type": "node",
+          "package-name": "jpg-frontend",
+          "component": "frontend"
+      }
+  }
 }
