--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,38 +32,15 @@ jobs:
           echo "Frontend Tag Name: ${{ steps.release.outputs.frontend--tag_name }}"
           echo "Frontend Release Created: ${{ steps.release.outputs.frontend--release_created }}"
         
+
+  # Trigger deployment jobs only if a release was created
   release-backend:
     if: ${{ needs.release-please.outputs.backend--release_created == 'true' }}
     runs-on: ubuntu-latest
     needs: release-please
-    steps:
-      - uses: actions/checkout@v4
-      - name: Create Backend Release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ needs.release-please.outputs.backend--tag_name }}
-          release_name: Backend Release ${{ needs.release-please.outputs.backend--tag_name }}
-          body: |
-            Automated backend release created by release-please.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+
 
   release-frontend:
     if: ${{ needs.release-please.outputs.frontend--release_created == 'true' }}
     runs-on: ubuntu-latest
     needs: release-please
-    steps:
-      - uses: actions/checkout@v4
-      - name: Create Frontend Release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ needs.release-please.outputs.frontend--tag_name }}
-          release_name: Frontend Release ${{ needs.release-please.outputs.frontend--tag_name }}
-          body: |
-            Automated frontend release created by release-please.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
