fix: update CI workflow to trigger on push and pull requests for dev branch

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 # Trigges workflow on push or pull requests to main branches
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 jobs:
   build-and-test-backend:
