--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,6 +18,9 @@ jobs:
       
       - name: Run tests
         run: docker run -e API_KEY=fake_api_key johnsgameprice-backend-test
+
+      - name: Run formatting check
+        run: docker run -e API_KEY=fake_api_key johnsgameprice-backend-test poetry run poe check
   
   build-frontend:
     runs-on: ubuntu-latest
