feat(ci,backend,frontend): Add formatting checks for frontend and backend
* fix: update CI workflow to trigger on push and pull requests for dev branch

* feat(ci,backend): add formatting check step to backend CI workflow (#26)

* feat(ci,backend): add formatting check step to backend CI workflow

* refactor(backend): improve code formatting and structure across multiple files

* fix(ci): correct casing in Dockerfile for base image declaration

* feat(ci,frontend): add formatting check step to frontend CI workflow (#28)

* feat(ci,frontend): add formatting check step to frontend CI workflow

* fix(ci,frontend): correct build target for frontend image in CI workflow

* refactor(frontend): format code for better readability in GameDetailPage and GameListPage

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,9 +2,9 @@ name: Continuous Integration
 # Trigges workflow on push or pull requests to main branches
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 jobs:
   build-and-test-backend:
@@ -18,6 +18,9 @@ jobs:
       
       - name: Run tests
         run: docker run -e API_KEY=fake_api_key johnsgameprice-backend-test
+
+      - name: Run formatting check
+        run: docker run -e API_KEY=fake_api_key johnsgameprice-backend-test poetry run poe check
   
   build-frontend:
     runs-on: ubuntu-latest
@@ -26,4 +29,7 @@ jobs:
       - name: Build production image
         env:
           VITE_API_BASE_URL: "https://api.johnsgameprice.com"
-        run: docker build --build-arg VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} --target production -t johnsgameprice-frontend -f frontend/Dockerfile frontend
+        run: docker build --build-arg VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} --target build -t johnsgameprice-frontend -f frontend/Dockerfile frontend
+
+      - name: Run formatting check
+        run: docker run johnsgameprice-frontend bun run format:check
