--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
     "requests",
     "python-dotenv",
     "fastapi",
-    "uvicorn"
+    "uvicorn",
+    "sqlalchemy (>=2.0.46,<3.0.0)",
+    "alembic (>=1.18.1,<2.0.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)"
 ]
 readme = "README.md"
 license = "MIT"
